# vgate-control-camera-client

./: CMakeLists.txt  LICENSE  README.md  camera-client.conf  main.cpp
auto-config-ip/: config_server.py
config/: camera-client.conf  config.json
config-server/: server.py
facedetect/: RetinaFace.cpp  RetinaFace.h  postProcessRetina.cpp  postProcessRetina.h  retinaNet.cpp  retinaNet.cu  retinaNet.h  superResNet.cpp  superResNet.cu  superResNet.h  tensorNet.cpp  tensorNet.h
facedetect/tensorrt/: trtnetbase.cpp  trtnetbase.h  trtretinafacenet.cpp  trtretinafacenet.h  trtutility.h
jetson-utils/: filesystem.cpp  filesystem.h  timespec.cpp  timespec.h
jetson-utils/camera/: gstCamera.cpp  gstCamera.h
jetson-utils/codec/: gstDecoder.cpp  gstDecoder.h  gstEncoder.cpp  gstEncoder.h  gstUtility.cpp  gstUtility.h
jetson-utils/cuda/: cudaFont.cu  cudaFont.h  cudaOverlay.cu  cudaOverlay.h  cudaRGB.cu  cudaRGB.h  cudaYUV-NV12.cu
jetson-utils/display/: glDisplay.cpp  glDisplay.h
jetson-utils/network/: IPv4.cpp  NetworkAdapter.cpp  Socket.cpp
jetson-utils/python/bindings/: PyCUDA.cpp  PyCUDA.h  PyCamera.cpp  PyGL.cpp  PyImageIO.cpp  PyNumPy.cpp  PyNumPy.h  PyUtils.h
jetson-utils/threads/: Event.cpp  Event.h  Mutex.cpp  Mutex.h  Process.cpp  Thread.cpp
proto/: gen.sh  multiple_camera_server.grpc.pb.cc  multiple_camera_server.grpc.pb.h  multiple_camera_server.pb.cc  multiple_camera_server.pb.h  multiple_camera_server.proto
retinaface/: RetinaFace.cpp  main.cpp
retinaface/tensorrt/: trtretinafacenet.cpp
tracking/: Hungarian.cpp  Hungarian.h  KalmanTracker.cpp  KalmanTracker.h  SORTtracker.cpp  SORTtracker.h  main.cpp  sort.cpp  sort.h  sort_tracking.cpp  sort_tracking.h
utils/: DrawText.h  base64.h  drawavatar1lane.cpp  drawavatar1lane.h  drawavatar2lanes.cpp  drawavatar2lanes.h  free_type.h  image_proc.cpp  image_proc.h  queue.cpp  queue.h  util.h
zsupervisor/: camera-client.conf  relay.conf
zsupervisor/auto-config-ip/: config_client.py  config_server.py
zsupervisor/relay-control/: config.json  door.py  main.py
